[package]
name = "ignis"
version = "0.1.0"
edition = "2024"

[features]
debug = []

[dependencies]
bitflags = "2.11.0"
objc2-metal = "0.3.2"
raw-window-handle = "0.6.2"
thiserror = "2.0.18"
vulkanalia = { version = "0.35.0", features = ["window", "libloading", "provisional"] }

[dev-dependencies]
ignis = { path = ".", features = ["debug"] }
anyhow = "1.0.102"
